[tool.poetry]
name = "rl-agents"
version = "0.1.0"
description = ""
authors = ["Robin Gower <robin.git@infonomics.ltd.uk>"]
readme = "README.md"
packages = [{include = "rl_agents"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
godot-rl = "^0.4.8"
ray = "^2.4.0"
sample-factory = "^2.0.3"
tabulate = "^0.9.0"
gymnasium = "^0.28.1"
dm-tree = "^0.1.8"
scipy = "^1.10.1"
lz4 = "^4.3.2"
protobuf = "3.19.4" # for compatibility ?


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
